chore: demo.java